ajuste-offset-div

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   socket.on("logServer", (log)=> {
       const divlog = document.createElement('div');
       divlog.innerHTML = log;
-      divlog.scrollTop = divlog.scrollHeight
+      div_log_do_servidor.scrollTop = div_log_do_servidor.scrollHeight
       if(spinnerVisivel == 1) {
           spinner_carregamento.style.display = "none";
           spinnerVisivel = 0;
